Bug 557346 - Try harder to fill report->ucmessage in when reporting errors.